ajustes na tela principal

--- a/src/Componentes/Login/login.css
+++ b/src/Componentes/Login/login.css
@@ -1,5 +1,6 @@
 .formulario-container {
     display: center;
+    gap: 20px;
     flex-wrap: wrap;
     justify-content: center;
     margin: 80px 50px;
