--- a/src/Componentes/Rodape/rodape.css
+++ b/src/Componentes/Rodape/rodape.css
@@ -1,17 +1,21 @@
 .footer {
-    background: #6278F7;
-    color: #FFF;
-    padding: 80px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  position: fixed;
+  display: flex;
+  width: 100%;
+  height: 2.5rem;
+  background-color: #6278f7;
+  color: #fff;
+  bottom: 0;
+  left: 0;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .footer ul li {
-    display: inline-block;
-    margin-right: 32px;
+  display: inline-block;
+  margin-right: 32px;
 }
 
 .footer ul li:last-child {
-    margin-right: 0;
+  margin-right: 0;
 }
