validando autenticacao no sistema

--- a/src/Componentes/Cabecalho/cabecalho.css
+++ b/src/Componentes/Cabecalho/cabecalho.css
@@ -1,4 +1,4 @@
-.botao {
+.cabecalho {
     background: #6278F7;
     border-radius: 10px;
     font-weight: 700;
@@ -12,6 +12,6 @@
     
 }
 
-.botao:hover {
+.cabecalho:hover {
     color: #95FFD4;
 }
