--- a/src/Componentes/Login/login.css
+++ b/src/Componentes/Login/login.css
@@ -2,6 +2,7 @@
     display: center;
     gap: 20px;
     flex-wrap: wrap;
+    width: 40%;
     justify-content: center;
     margin: 80px 50px;
 }
