--- a/src/Componentes/ListaProdutos/produtos.css
+++ b/src/Componentes/ListaProdutos/produtos.css
@@ -1,9 +1,28 @@
 .lista-suspensa {
-    margin: 14px 0;
+  margin: 14px 0;
 }
 
 .lista-suspensa label {
-    display: block;
-    margin-bottom: 8px;
-    font-size: 14px;
+  display: block;
+  margin-bottom: 8px;
+  font-size: 24px;
+}
+
+#container-center-produtos {
+  position: absolute;
+  left: 0;
+  width: 70%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+#formatar-produtos {
+  margin-top: 60%;
+  position: absolute;
+  margin-top: 10;
+  left: 30%;
+  width: 100%;
+  align-items: center;
+  justify-content: space-between;
 }
